--- a/index.html
+++ b/index.html
@@ -49,17 +49,10 @@
 		<p>Группа: 210902</p>
        
     </div>
-    <h3>Лабораторные работы</h3>
+    <h3>Лабораторные работы ЭВТ</h3>
     <ul class="lab-list">
-		<li><a href="lab1/index.html">Лабораторная работа №1</a></li>
-		<li><a href="lab2/index.html">Лабораторная работа №2</a></li>
-		<li><a href="lab3/index.html">Лабораторная работа №3</a></li>
-		<li><a href="lab4/index.html">Лабораторная работа №4</a></li>
-        <li><a href="lab5/lab5.html">Лабораторная работа №5</a></li>
-        <li><a href="lab6/lab5.html">Лабораторная работа №6</a></li>
-	    <li><a href="lab7/lab7.html">Лабораторная работа №7</a></li>
-        <li><a href="lab8/lab8.html">Лабораторная работа №8</a></li>
-	      <li><a href="пз отчет.pdf">практическая работа</a></li>
+		<li><a href="лр5/<!DOCTYPE html>.html">Лабораторная работа №5</a></li>
+	
 
 
 	</ul>
