--- a/index.html
+++ b/index.html
@@ -6,57 +6,74 @@
     <title>Информация о студенте</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #1e1e2f, #2a2a3d);
+            color: #f0f0f0;
             margin: 0;
             padding: 20px;
         }
         h1 {
             text-align: center;
             color: #4CAF50;
+            margin-bottom: 10px;
         }
         .container {
             max-width: 600px;
             margin: 0 auto;
-            background: white;
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
             padding: 20px;
         }
         .student-info {
             margin-bottom: 20px;
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 10px;
+        }
+        .student-info p {
+            margin: 5px 0;
+            font-size: 18px;
+        }
+        h3 {
+            text-align: center;
+            color: #f0f0f0;
         }
         .lab-list {
             list-style-type: none;
             padding: 0;
         }
         .lab-list li {
-            background: #e0f7fa;
+            background: rgba(255, 255, 255, 0.2);
             margin: 5px 0;
-            padding: 10px;
+            padding: 15px;
             border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .lab-list li:hover {
+            background: rgba(255, 255, 255, 0.3);
+        }
+        .lab-list a {
+            text-decoration: none;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+        .lab-list a:hover {
+            text-decoration: underline;
+            color: #ffffff;
         }
     </style>
 </head>
 <body>
-
-<div class="container">
-
-    <div class="student-info">
-        <h1>ПИИС</h1>
-		<p> Филимонюк Артем</p>
-		<p>Группа: 210902</p>
-       
+    <div class="container">
+        <div class="student-info">
+            <h1>ЭВТ</h1>
+            <p>Филимонюк Артем</p>
+            <p>Группа: 210902</p>
+        </div>
+        <h3>Лабораторные работы</h3>
+        <ul class="lab-list">
+            <li><a href="лр5/<!DOCTYPE html>.html">Лабораторная работа №5</a></li>
+        </ul>
     </div>
-    <h3>Лабораторные работы ЭВТ</h3>
-    <ul class="lab-list">
-		<li><a href="лр5/<!DOCTYPE html>.html">Лабораторная работа №5</a></li>
-	
-
-
-	</ul>
-</div>
-
 </body>
 </html>
