--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             color: #f0f0f0;
             margin: 0;
             padding: 20px;
+             height: 100vh; /* Высота для полного охвата экрана */
         }
         h1 {
             text-align: center;
