--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h3>Лабораторные работы</h3>
         <ul class="lab-list">
             <li><a href="лр5/<!DOCTYPE html>.html">Лабораторная работа №5</a></li>
-            <li><a href="лр6/<!DOCTYPE html>.html">Лабораторная работа №6</a></li>
+            <li><a href="лр6/6_lab_EVT.html">Лабораторная работа №6</a></li>
         </ul>
     </div>
 </body>
