--- a/лр6/6_lab_EVT.html
+++ b/лр6/6_lab_EVT.html
@@ -14,7 +14,7 @@
     <button onclick="resetPendulum()">Click on me</button>
     <a href="#">Link to a very important site</a>  
     <div class="ball"></div>    
-    <div class="ball2"></div>          
+   // <div class="ball2"></div>          
     <script>
         // Параметры маятника
         const g = 2.81; // угловое ускорение (м/с²)
