Your commit message here

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <ul class="lab-list">
             <li><a href="лр5/<!DOCTYPE html>.html">Лабораторная работа №5</a></li>
             <li><a href="лр6/6_lab_EVT.html">Лабораторная работа №6</a></li>
+            <li><a href="лр7/EVT_lab7.html">Лабораторная работа №7</a></li>
+            <li><a href="лр8/EVT_lab8.html">Лабораторная работа №8</a></li>
+            <li><a href="лр9/EVT_lab9.html">Лабораторная работа №9</a></li>
         </ul>
     </div>
 </body>
