--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li><a href="лр7/EVT_lab7.html">Лабораторная работа №7</a></li>
             <li><a href="лр8/EVT_lab8.html">Лабораторная работа №8</a></li>
             <li><a href="лр9/EVT_lab9.html">Лабораторная работа №9</a></li>
-              <li><a href="лр11/EVT_lab11.html">Лабораторная работа №11</a></li>
+              <li><a href="лр11/index.html">Лабораторная работа №11</a></li>
         </ul>
     </div>
 </body>
