--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             <li><a href="README.md">Лабораторная работа №10</a></li>
               <li><a href="лр11/index.html">Лабораторная работа №11</a></li>
         </ul>
+        <ul class="lab-list">
+         
+              <li><a href="AUTO/index.html">Курсовое проеектирование</a></li>
+        </ul>
     </div>
 </body>
 </html>
